# rtplib

./: .gitignore  CMakeLists.txt  video.sdp  video96.sdp  video_audio.sdp
include/rtplib/: rtcp-packets.h  rtcp-types.h  rtcp.h  rtp-header.h  rtp-session.h  rtp-socket.h  rtp-stream.h
src/: clock.cc  clock.h  h264.h  main.cc  rtcp-packets.cc  rtcp.cc  rtp-header.cc  rtp-header.h  rtp-socket.cc  rtp-stream.cc  rtp-stream.h  utils.h
src/rtptest/: main.cc
src/rtptest/testing/: ffmpeg-encoder.h  ffmpeg-reader.h
src/testing/: ffmpeg-encoder.h  ffmpeg-reader.h  file-writer.h  opus-encoder.h
